--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 	<header class="header">
 		<!-- logo -->
 		<a href="index.html" class="logo">
-		<img src="C:\Users\sorio\Documents\Crozhanes\logo1.png" width = "100" height= "100">
+		<img src="logo1.png" width = "100" height= "100">
 		</a>
 
 		<!-- nav bar start-->
